# the_girl_who_climbed_the_tower

./: .gitignore  Cargo.toml  build-wasm.sh  web_bug
.github/workflows/: release.yaml
assets/: black.aseprite  bullet.aseprite  cycle_indicator.aseprite  door.aseprite  drop.aseprite  floater_a.aseprite  floater_b.aseprite  floater_occluded.aseprite  gargoyle.aseprite  gargoyle_inactive.aseprite  grate.aseprite  grate_circle.aseprite  heart.aseprite  heart_empty.aseprite  key_enter.aseprite  level.aseprite  level.ldtk  levels.aseprite  levels.ldtk  ouroboros.aseprite  player_down_0.aseprite  player_down_1.aseprite  player_hurt.aseprite  player_side_0.aseprite  player_side_1.aseprite  player_up_0.aseprite  player_up_1.aseprite  summon_ani.aseprite  summoner.aseprite  summoner_occluded.aseprite  test.aseprite  tiles.aseprite
assets/sfx/: sfx
src/: aseprite.rs  bullet.rs  collision.rs  deathscreen.rs  enemy.rs  ldtk.rs  level.rs  main.rs  music.rs  player.rs
wasm/: index.html
