[package]
name = "the_girl_who_climbed_the_tower"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies]
anyhow = "1.0.86"
asefile = "0.3.8"
# bevy = "0.14"
bevy = { version="0.14", features=["dynamic_linking"]}
bevy_asset_loader = "0.21.0"
bevy_ecs_ldtk = "0.10.0"

