[package]
name = "the_girl_who_climbed_the_tower"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies]
anyhow = "1.0.86"
asefile = "0.3.8"
bevy = { version = "0.14", default-features = false, features = ["bevy_sprite","bevy_audio","bevy_text","bevy_winit","vorbis","x11","webgl2"]}
bevy_asset_loader = {version="0.21", features=["2d"]}
rand = "0.8.5"
serde = "1"
serde_json = "1"

